src/test/deca/etapeA/valid/lex_literal_int.deca
// Description:
//    test du lexeur pour les litéraux entiers
//
// Resultats:
// ok

1
237
32130928386632
