src/test/deca/etapeA/invalid/lexer/lex_separators_i.deca
// Description:
//    test du lexeur pour les séparateurs
//
// Resultats:
// ok

    \r \n

